src/html/classic/css/gsa-style.css
/* ... */
.ui-icon.ui-icon-waiting {
  background-image: url('/img/loading.gif');
  background-position: 0 center;
}

/* jquery ui transfer effect css settings */
.ui-effects-transfer {
 border: 1px dotted black;
}

/* reduce max dialog size and show scrollbars if content is larger */
.dialog-form.ui-dialog-content {
  max-height: 500px !important;
  overflow: auto;
  margin-top: 5px;
  margin-bottom: 5px;
}

/* info dialog progress */
.ui-dialog .progress {
  font-size: 20px;
  text-align: right;
  margin-right: 10px;
  margin-bottom: 5px;
  vertical-align: middle;
}

.ui-dialog .progress img {
  margin: 0 5px;
  cursor: pointer;
}

.ui-dialog .progress img, .ui-dialog .progress span {
  vertical-align: middle;
}

/* The new reworked list view */

#list-window-charts,
#list-window-table {
  margin: 10px;
}

#list-window-filter {
  text-align: right;
}

#list-window-filter > div {
  display: inline-block;
  vertical-align: top;
}

.section-header {
  margin: 10px 0px;
  border-bottom: 2px solid black;
}

.section-header h1,
.section-header h2,
.section-header h3 {
  margin: 0;
  display: inline-block;
}

.section-header .icon {
  margin-right: 5px;
}

.section-header .icon-action {
  float: right;
}

.section-header .section-header-info {
  float: right;
  font-size: 10px;
}

.section-header .section-header-info table {
  font-size: inherit;
  border-spacing: 0;
}

.section-box {
  margin: 10px 0px;
  margin-bottom: 20px;
}

.icon-sm {
  width: 16px;
  height: 16px;
}

.icon-lg {
  width: 50px;
  height: 50px;
}

.toolbar {
  padding-top 5px;
  padding-bottom: 5px;
}

.toolbar .icon {
  margin-right: 3px;
  display: inline-block;
  vertical-align: middle;
}

.toolbar .divider {
  width: 16px;
  display: inline-block;
}

.toolbar div.icon, .toolbar div.icon form,
.table-actions div.icon, .table-actions div.icon form {
  display: inline;
}

.toolbar .select2-container--default .select2-selection--single {
  /* remove after we have a common height for all input elements */
  height: 22px;
}

.toolbar .form-group {
  white-space: nowrap;
}

.toolbar .form-control {
  margin-right: 2px;
}

.toolbar .footnote {
  max-width: 500px;
}

.toolbar > div[class*="col-"] {
  /* remove padding from col-* elements */
  padding-left: 0px;
  padding-right: 0px;
}

.toolbar:before,
.toolbar:after,
.section-header:before,
.section-header:after {
  content: " ";
  display: table;
}

.toolbar:after,
.section-header:after {
  clear: both;
}

.table-actions .icon {
  margin-right: 3px;
}

.valign-middle {
  vertical-align: middle;
}

.hidden, .dashboard-data-source, .dashboard-chart, .dashboard-filter {
  display: none !important;
}

/* table for forms */
.table-form {
  width: 100%;
  border: 0;
  border-spacing: 0px; /* == cellspacing="0" */
  border-collapse: collapse;
}

.table-form td {
  vertical-align: middle;
  padding: 3px; /* == cellpadding="3" */
}

.table-form td div {
  padding: 3px 0;
}

.table-form label, .table-form button, .table-form input[type=button],
.table-form input[type=text], .table-form textarea,
.table-form input[type=password] {
  display: inline-block;
  vertical-align: middle;
}

.table-form input[type=radio], .table-form input[type=checkbox] {
  margin: 0 5px;
  vertical-align: sub;
}

.table-form label input,
.table-form label .select2-container {
  margin-left: 5px;
  margin-right: 5px;
}

.table-form td a {
  margin: 0 5px;
}

.table-form .select2-container {
  min-width: 180px;
  max-width: 180px;
  width: 180px;
}

/* vim: set ts=2 sw=2 tw=80:*/

